--- a/Sakina/app/src/main/AndroidManifest.xml
+++ b/Sakina/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Sakina">
+        android:theme="@style/Theme.Sakina"
+        >
         <activity
             android:name=".MainActivity"
             android:exported="true"
