--- a/Sakina/gradle/libs.versions.toml
+++ b/Sakina/gradle/libs.versions.toml
@@ -10,6 +10,9 @@ activityCompose = "1.12.2"
 composeBom = "2024.09.00"
 hilt = "2.51"
 uiGraphics = "1.10.2"
+foundation = "1.10.2"
+workRuntimeKtx = "2.11.1"
+hiltCommon = "1.3.0"
 
 
 [libraries]
@@ -31,6 +34,9 @@ androidx-compose-material3-adaptive-navigation-suite = { group = "androidx.compo
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version.ref = "uiGraphics" }
+androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
+androidx-hilt-common = { group = "androidx.hilt", name = "hilt-common", version.ref = "hiltCommon" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
