feat: Implement Azkar notification reminders
This commit introduces a feature for sending daily Azkar (remembrance) notifications for morning and evening.

Key changes include:
- **Azkar Notification Worker**: Added `AzkarWorker` to schedule and display notifications for morning and evening Azkar.
- **Notification Permissions**: Implemented runtime permission requests for `POST_NOTIFICATIONS` on Android 13 (TIRAMISU) and above using `accompanist-permissions`.
- **Deep Linking**: Configured deep links to navigate users from a notification directly to the relevant Azkar category (morning or evening).
- **Work Scheduling**: Set up `PeriodicWorkRequest` in `MainActivity` to trigger the `AzkarWorker` at specific times (7 AM for morning, 7 PM for evening).
- **UI & Navigation**:
    - Renamed the app from "Sakina" to "Sakan".
    - Added a "Dua" (supplication) item to the bottom navigation bar.
- **Dependencies**: Added the `accompanist-permissions` library.
- **Bug Fixes**: Corrected minor typos in the `dua.json` asset file.

--- a/Sakina/app/src/main/AndroidManifest.xml
+++ b/Sakina/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -23,6 +24,15 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <intent-filter >
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:scheme="sakan"
+                    android:host="azkar" />
             </intent-filter>
         </activity>
     </application>
